proxy_apps/pihole-proxy/pihole-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pihole-middleware
  namespace: default
spec:
  addPrefix:
    prefix: /admin
